<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:padding="10dp">


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/weight_label"
                android:id="@+id/textView_weight_label" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_weight"
                android:layout_weight="1"
                android:hint="Enter Weight"
                android:maxLength="4"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/switchGender"
                android:textOn="M"
                android:textOff="F"
                android:showText="true"
                android:checked="false"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:id="@+id/buttonSave"
            android:onClick="saveAll"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drink_size"
            android:id="@+id/textViewDrink"
            android:layout_marginLeft="5dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/alcoholLevel"
            android:orientation="horizontal">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oneoz"
                    android:id="@+id/radioButtonOneOz"
                    android:layout_marginLeft="10dp"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fiveOz"
                    android:id="@+id/radioButtonfiveOz"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_horizontal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twelveOz"
                    android:id="@+id/radioButtonTwelveOz"
                    android:layout_marginLeft="10dp"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alcoholPercentage"
            android:id="@+id/alcohol_label"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentageAlcohol"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/intialvalue"
            android:id="@+id/textViewPerAlcohol"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/perSymbol"
            android:id="@+id/perSymbol"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addDrink"
            android:id="@+id/addDrink"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.50"
            android:onClick="addDrink"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/buttonReset"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.50"
            android:onClick="resetAll"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bacLevel"
            android:id="@+id/bac_level"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nilVal"
            android:id="@+id/resultBAC"
            android:layout_gravity="center_vertical" />


    </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yourstatus"
            android:id="@+id/textView_Status"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/finalStatus"
            android:text="@string/you_r_safe"
            android:background="@drawable/textviewlayout"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>




